--- a/app.css
+++ b/app.css
@@ -1,3 +1,10 @@
+
+:root {
+    --initial-button-padding: 5px;
+    --target-button-padding: 50px;
+}
+
+
 * {
     box-sizing: border-box;
 }
@@ -11,12 +18,19 @@ html, body {
 body {
     display: flex;
     flex-flow: column;
-    height: 100%;
+    padding: 5px;
+
+    font-family: Arial, Helvetica, sans-serif;
 }
 
+hr {
+    width: 100%;
+}
+
+/* Grid container */
+
 .grid-container {
-    margin: 5px;
-    padding: 2px;
+   
     height: 100%;
     border: 1px solid greenyellow;
 
@@ -44,9 +58,35 @@ body {
 button {
     width: 100%;
     height: 100%;
+    padding: var(--initial-button-padding);
 }
 
 button:hover {
-    padding: 40px;
+    animation-duration: 0.3s;
+    animation-name: grow;
+
+    padding: var(--target-button-padding);
+    font-size: 15px;
+    font-weight: bolder;
 }
 
+/* Animation definition */
+
+
+@keyframes grow {
+    from {
+        padding: var(--initial-button-padding);
+        font-size: 4px;
+        font-weight: lighter;
+    }
+
+    50% {
+        font-size: 35px;
+    }
+
+    to {
+        padding: var(--target-button-padding);
+        font-size: 15px;
+        font-weight: bolder;
+    }
+}
