--- a/app.css
+++ b/app.css
@@ -12,6 +12,10 @@ html, body {
     height: 100%;
     width: 100%;
     margin: 0;
+
+    /* disable overscroll */
+    position: fixed;
+    overflow: hidden;
 }
 
 body {
@@ -20,6 +24,7 @@ body {
     padding: 5px;
 
     font-family: Arial, Helvetica, sans-serif;
+
 }
 
 hr {
@@ -29,7 +34,7 @@ hr {
 /* Grid container */
 
 .grid-container {
-    height: 100%;
+    height: 50%;
     border: 1px solid greenyellow;
 
     display: grid;
